--- a/src/main/resources/static/Love.html
+++ b/src/main/resources/static/Love.html
@@ -25,32 +25,30 @@
     <div id="wrap">
         <div id="text">
             <div id="code">
-                <span class="say">我的爱人，我会牵着你的手，走到满头白发的那一天，</span><br>
-                <span class="say">我会守护你生命里的精彩，并陪伴你一路精彩下去。</span><br>
-                <span class="say">你的幸福快乐，是我一生的追求。</span><br>
-                <span class="say">我会每一天带着笑脸，和你说早安，</span><br>
-                <span class="say">我会每一晚与你道声晚安再入梦乡，</span><br>
-                <span class="say">我会带你去所有你想去的地方，</span><br>
+                <span class="say">亲爱的小宝, 在我们在一起即将满520天的时候, 我为你做了这个页面</span><br>
+                <span class="say">在我们自己的服务器下运行, 记录着我们的爱情.</span><br>
+                <span class="say">我会守护你生命里的精彩, 并陪伴你一路精彩下去.</span><br>
+                <span class="say">你的幸福快乐, 是我一生的追求.</span><br>
+                <span class="say">我会每一天带着笑脸, 和你说早安,</span><br>
+                <span class="say">我会每一晚与你道声晚安再入梦乡,</span><br>
+                <span class="say">我会带你去所有你想去的地方,</span><br>
                 <span class="say">陪你闹看你笑</span><br>
-                <span class="say">历经你生命中所有的点点滴滴。</span><br>
-                <span class="say">我期待这一生与你一起走过，</span><br>
-                <span class="say">我期待与你慢慢变老</span><br>
-                <span class="say">等我们老到哪儿也去不了，</span><br>
-                <span class="say">还能满载着一生的幸福快乐 ！</span><br>
+                <span class="say">历经你生命中所有的点点滴滴.</span><br>
+                <span class="say">我期待这一生与你一起走过.</span><br>
                 <br>
-                <span class="say">我会为我们的未来撑起一片天空，</span><br>
-                <span class="say">为我们的将来担负起一生的责任，</span><br>
-                <span class="say">愿意为你去做每一件能让你开心快乐的事。</span><br>
-                <span class="say">所有我们经历的点点滴滴，</span><br>
-                <span class="say">都是我们一辈子最美的回忆。</span><br>
-                <span class="say">我愿意爱你直到老去！</span><br>
+                <span class="say">我会为我们的未来撑起一片天空,</span><br>
+                <span class="say">为我们的将来担负起一生的责任,</span><br>
+                <span class="say">愿意为你去做每一件能让你开心快乐的事.</span><br>
+                <span class="say">所有我们经历的点点滴滴,</span><br>
+                <span class="say">都是我们一辈子最美的回忆.</span><br>
+                <span class="say">不要忘记, 我也是你的小宝 ^_^</span><br>
                 <br>
-                <span class="say"><span class="space"></span> -- Yours, wuxia2001.</span>
+                <span class="say"><span class="space"></span> -- Yours, Mr.Jiang</span>
             </div>
         </div>
         <div id="clock-box">
-            <a href="http://blog.csdn.net/wuxia2001" target="_blank">@wuxia2001</a> 与 <a
-                href="http://blog.csdn.net/wuxia2001" target="_blank">@月亮女</a> 在一起的
+            <a href="http://blog.csdn.net/wuxia2001" target="_blank">姜先生</a> 与 <a
+                href="http://blog.csdn.net/wuxia2001" target="_blank">小宝</a> 在一起的
             <div id="clock"></div>
         </div>
         <canvas id="canvas" width="1100" height="680"></canvas>
@@ -192,9 +190,9 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
             var together = new Date();
-            together.setFullYear(2010, 5, 8);
-            together.setHours(20);
-            together.setMinutes(20);
+            together.setFullYear(2017, 9, 17);
+            together.setHours(0);
+            together.setMinutes(0);
             together.setSeconds(0);
             together.setMilliseconds(0);
 
